--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ numpy
 matplotlib
 torch
 torchvision
-albumentations
+albumentations>=0.4.6
 pandas
 scikit-image
 git+https://github.com/qubvel/segmentation_models.pytorch.git@a3cc9ac 
